was made refactoring. correct structure image controller and db

--- a/bin/openapi/homepage.yaml
+++ b/bin/openapi/homepage.yaml
@@ -154,7 +154,7 @@ components:
             avatars: [
               {
                 type: 'black',
-                imageId: 'ddfdzrn1dw',
+                imageId: 9,
               }
             ]
     HomePageResponse:
