--- a/bin/openapi/bundle-doc.yaml
+++ b/bin/openapi/bundle-doc.yaml
@@ -1020,7 +1020,7 @@ paths:
                               properties:
                                 id:
                                   type: string
-                                  example: ddfdzrn1dw
+                                  example: 1
                                 url:
                                   type: string
                                   example: public/images/pic-500x500-mid.png
@@ -1029,7 +1029,7 @@ paths:
                                   example: 'pic-500x500-mid.png,'
                                 description:
                                   type: string
-                                  example: Description about this photo
+                                  example: Description about this icon
         '400':
           $ref: '#/components/responses/4XX'
         '500':
@@ -1141,8 +1141,11 @@ paths:
                 properties:
                   id:
                     type: string
-                    example: ddfdzrn1dw
-                  items:
+                    example: 1
+                  description:
+                    type: string
+                    example: Description image. It can be useful for alt properties in img tag
+                  divisionByTemplates:
                     type: array
                     items:
                       type: object
@@ -1159,10 +1162,7 @@ paths:
                         name:
                           type: string
                           example: 'pic-500x500-mid.png,'
-                        description:
-                          type: string
-                          example: Description about this photo
-                        templateName:
+                        template:
                           type: string
                           example: mid
                       required:
