was corrected readme

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio-backend",
+  "name": "portfolio-api",
   "version": "0.0.0",
   "description": "portfolio back end",
   "private": true,
